--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -281,6 +281,16 @@ This material is based upon work supported by the Department of Energy
 National Nuclear Security Administration under Award Number(s) DE-NA0002576 via
 the Consortium for Nonproliferation Enabling Capabilities.
 
+Prof. Huff is supported by the Nuclear Regulatory Commission Faculty
+Development Program, the Blue Waters sustained-petascale computing project
+supported by the National Science Foundation (awards OCI-0725070 and
+ACI-1238993) and the state of Illinois, the NNSA Office of Defense Nuclear
+Nonproliferation R\&D through the Consortium for Verfication Technologies and
+the Consortium for Nonproliferation Enabling Capabilities (awards DE-NA0002576
+and DE-NA0002534), and the International Institute for Carbon Neutral Energy
+Research (WPI-I2CNER), sponsored by the Japanese Ministry of Education,
+Culture, Sports, Science and Technology.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{ans}
 \bibliography{bibliography}
